fixes alignment in nav bar

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -7,6 +7,7 @@ body {
     height: 4rem;
     gap: 4rem;
     padding: 0 2rem;
+    align-items: center;
 }
 
 input {
